k8s/networkpolicy/np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      env: test
  policyTypes:
    - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            myspace: myns
